# VetMediatorMCP

./: .VetMediatorSetting.json.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.md  collect-logs.sh  install.sh  pyproject.toml  verify-config.sh
docs/: QUICKSTART.md
docs/en/: README.md
docs/sample/: README.md
docs/zh/: README.md
rules/: .mcp.json  CLAUDE.md  rule-agent-file-generator.md
src/: __init__.py  cli_check_ui.py  cli_config.py  cli_config_check_ui.py  cli_monitor_ui.py  command_builder.py  data_models.py  encoding_utils.py  file_generator.py  gui_utils.py  report_parser.py  reviewer.py  rule_templates.py  server.py  template.py  workflow_manager.py
