[project]
name = "VetMediator"
version = "0.0.1"
description = "AI CLI工具审查协调器MCP服务器，支持多工具代码审查工作流"
authors = [
    { name = "ldr123", email = "ldr12@163.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "PySide6>=6.5.0",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/ldr123/VetMediatorMCP"
Repository = "https://github.com/ldr123/VetMediatorMCP"
Issues = "https://github.com/ldr123/VetMediatorMCP/issues"

[project.scripts]
vet-mediator-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
